--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
 	"servers": [
 		"403383749745573889"
 	],
-	"roleName": "Bots",
+	"roleName": "Burger",
 	"colors": 12,
 	"speed": 100,
 	"logging": true
